--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "prettier-plugin-tailwindcss": "^0.6.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-particles": "^2.12.2",
+    "tsparticles": "^3.7.1",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
