--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-dom": "^18.3.1",
     "react-particles": "^2.12.2",
     "tsparticles": "^3.7.1",
+    "tsparticles-engine": "^2.12.0",
+    "tsparticles-slim": "^2.12.0",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
@@ -29,5 +31,8 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6"
+  },
+  "resolutions": {
+    "tsparticles-engine": "^2.12.0"
   }
 }
